@@ -1,4 +1,5 @@
 - Fix missing css/js scripts in filter form in mail task
+- Fix default vacation status (#1490019)
 - Fix bug where non-existing (or unsubscribed) folder wasn't listed in folder selector (#1489956)
 - Added optional separate interface for out-of-office management (#1488266)
 - Fix disabled "create filter" action
